--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cherry.fullplayer">
 
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <!-- wifi状态检测-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- 网络状态检测 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +26,9 @@
         </activity>
         <activity android:name=".MainActivity"/>
         <activity android:name=".activity.CityActivity"/>
+        <activity android:name=".activity.DialogActivity"
+            android:theme="@style/mytheme" />
+        <service android:name=".service.WifiDetectorService"/>
     </application>
 
 </manifest>
