--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
             android:theme="@style/mytheme"/>
         <activity android:name=".activity.QpopActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activity.WifiConnectHintActivity"/>
         <service android:name=".service.WifiDetectorService"/>
     </application>
 
