--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'pub.devrel:easypermissions:0.2.0'
     testCompile 'junit:junit:4.12'
+    implementation files('libs/AMap_Location_V3.00_20160922.jar')
+    implementation files('libs/pinyin4j-2.5.0.jar')
 }
