--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,23 @@
     <!-- 网络状态检测 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!--用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!--用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!--获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!--用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <!--这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <!--用于访问网络，网络定位需要上网-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!--用于读取手机当前的状态-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <!--写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
@@ -39,7 +56,11 @@
         <activity android:name=".activity.QpopActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.WifiConnectHintActivity"/>
+        <activity android:name=".citypicker.MainActivity"/>
         <service android:name=".service.WifiDetectorService"/>
+
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="8fb1a3c7079adbf57c180f2acd4cffd7">
+        </meta-data>
     </application>
 
 </manifest>
